Closed Bug 728581 Opened 12 years ago Closed 12 years ago

Cannot scroll xul:textbox by dragging thumb of scroll bar

Categories

(Core :: XUL, defect)

13 Branch
x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: alice0775, Assigned: enndeakin)

References

Details

(Keywords: regression)

Attachments

(2 files)

Build Identifier:
http://hg.mozilla.org/mozilla-central/rev/550779e6bab4
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:13.0a1) Gecko/13.0a1 Firefox/13.0a1 ID:20120218031156

Cannot scroll xul:textbox by dragging thumb of scroll bar.
Contens are dragged instead of scroll.

Reproducible: Always

Steps to Reproduce:
1. Start Firefox with new profile
2. Install xpi attached. And restart.
3. Open Addon Manager (Ctrl+Shift+A)
4. Select Extension Tab and Click "Option" button of extension aaaa
5. Try to scroll by dragging thumb of scroll bar 


Actual Results:
  Textbox does not scroll.
  Content is dragged if content is selected.

Expected Results:
  Textbox should scroll.
  Content should not be dragged.



Regression window(m-c)
Works:
http://hg.mozilla.org/mozilla-central/rev/a3b93f3949fe
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:13.0a1) Gecko/20120217 Firefox/13.0a1 ID:20120217155649
Fails:
http://hg.mozilla.org/mozilla-central/rev/e001b5eda618
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:13.0a1) Gecko/13.0a1 Firefox/13.0a1 ID:20120217162149
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=a3b93f3949fe&tochange=e001b5eda618



Regression window(m-i)
Works:
http://hg.mozilla.org/integration/mozilla-inbound/rev/174ce0df7cdd
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:13.0a1) Gecko/13.0a1 Firefox/13.0a1 ID:20120217061753
Fails:
http://hg.mozilla.org/integration/mozilla-inbound/rev/51d333edddfd
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:13.0a1) Gecko/13.0a1 Firefox/13.0a1 ID:20120217062249
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=174ce0df7cdd&tochange=51d333edddfd

Regressed by: Bug 499008
This also affected to Description of Detail pane in Library.

Steps to Reproduce:
1. Start Firefox with new profile
2. Open Library (Ctrl+Shift+B)
3. Select a Bookmark to edit
4. Select Extension Tab and Click "Option" button of extension aaaa
5. Expand Edit pane by click More button
6. Type enough text until scroll bar appears
7. Try to scroll up/down by dragging thumb of scroll bar
Reproduced on Ubuntu.
http://hg.mozilla.org/mozilla-central/rev/550779e6bab4
Mozilla/5.0 (X11; Linux i686; rv:13.0a1) Gecko/13 Firefox/13.0a1 ID:20120218031156
OS: Windows 7 → All
And this also affected to Description of Bookmarks Properties dialog.

Steps to Reproduce:
1. Start Firefox with new profile
2. Right click on a Bookmark
3. Type enough text in Description until scroll bar appears
4. Try to scroll up/down by dragging thumb of scroll bar

Actual Results:
  Textbox does not scroll.
  Content is dragged if content is selected.

Expected Results:
  Textbox should scroll.
  Content should not be dragged.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Did you intend to not request review?
Comment on attachment 599604 [details] [diff] [review]
Use ContainsNode instead of just checking for a non-collapsed selection

I thought I could get a test for this but can't seem to make a test for scrollbars.
Attachment #599604 - Flags: review?(bugs)
Comment on attachment 599604 [details] [diff] [review]
Use ContainsNode instead of just checking for a non-collapsed selection

Ehsan, could you review this? You reviewed this part of Bug 499008.
Attachment #599604 - Flags: review?(bugs) → review?(ehsan)
Attachment #599604 - Flags: review?(ehsan) → review+
https://hg.mozilla.org/mozilla-central/rev/d73fddbc6b63
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla13
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: