Bug 728581, use ContainsNode to determine if the mouse is over a selection so that dragging a scrollbar in chrome works properly, r=ehsan